# ChangeLog for net-im/gajim
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.77 2009/05/31 23:59:52 ranger Exp $

  31 May 2009; Brent Baude <ranger@gentoo.org> gajim-0.12.1.ebuild:
  Marking gajim-0.12.1 ~ppc64 for bug 267709

  03 May 2009; Tobias Klausmann <klausman@gentoo.org> gajim-0.12.1.ebuild:
  Keyworded on alpha, bug #267709

  28 Apr 2009; Jeroen Roovers <jer@gentoo.org> gajim-0.12.1.ebuild:
  Marked ~hppa (bug #267709).

*gajim-0.12.1 (27 Apr 2009)

  27 Apr 2009; Patrick Lauer <patrick@gentoo.org>
  +files/0.12.1-roster_window.py_r10934.patch,
  +files/0.12.1-sound-path-fix.patch,
  +files/0.12.1_autotools_install_pyfiles_in_pkglibdir.patch,
  +files/fix_autotools_and_search_dirs.patch, +gajim-0.12.1.ebuild:
  Bump to 0.12.1, fixes #251298. Patches by Bruno Tarquini, ebuild mods by
  Bruno Tarquini and Marcin Rybarski.

  07 Mar 2009; Thomas Anderson <gentoofan23@gentoo.org> gajim-0.11.1.ebuild,
  gajim-0.11.2.ebuild, gajim-0.11.2-r1.ebuild, gajim-0.11.3.ebuild,
  gajim-0.11.3-r1.ebuild, gajim-0.11.4.ebuild:
  Transition to eapi 2 use deps

  05 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org> metadata.xml:
  Add USE flag description to metadata as per GLEP 56.

  24 Jan 2008; Christoph Mende <angelos@gentoo.org> gajim-0.11.4.ebuild:
  Stable on amd64, bug #205253

  23 Jan 2008; Raúl Porcel <armin76@gentoo.org> gajim-0.11.4.ebuild:
  alpha/sparc stable wrt #205253

  23 Jan 2008; Christian Faulhammer <opfer@gentoo.org> gajim-0.11.4.ebuild:
  stable x86, bug 205253

  22 Jan 2008; Brent Baude <ranger@gentoo.org> gajim-0.11.4.ebuild:
  Marking gajim-0.11.4 ppc and ppc64 for bug 205253

  22 Jan 2008; Peter Weller <welp@gentoo.org>
  +files/gajim-0.11.4-test_fix.patch, gajim-0.11.4.ebuild:
  Fix tests

*gajim-0.11.4 (07 Dec 2007)

  07 Dec 2007; <welp@gentoo.org> +gajim-0.11.4.ebuild:
  Bump

  04 Dec 2007; <welp@gentoo.org> files/0.11.3-misc-fixes.patch: