@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/Attic/gajim-0.12.1.ebuild,v 1.4 2009/05/31 23:59:52 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/Attic/gajim-0.12.1.ebuild,v 1.5 2009/07/21 11:31:41 ssuominen Exp $
 
 EAPI="2"
 
@@ -15,18 +15,14 @@ SLOT="0"
 KEYWORDS="~alpha ~amd64 ~hppa ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
 IUSE="avahi dbus gnome idle libnotify nls spell srv trayicon X xhtml"
 
-DEPEND="|| (
-		( <dev-lang/python-2.5 dev-python/pysqlite )
-		>=dev-lang/python-2.5[sqlite]
-	)
+DEPEND=">=dev-lang/python-2.5[sqlite,xml]
 	dev-python/pygtk
 	sys-devel/gettext
 	dev-util/intltool
 	dev-util/pkgconfig"
 
 RDEPEND="gnome? ( dev-python/gnome-python-extras
-		dev-python/gnome-python-desktop
-	)
+		dev-python/gnome-python-desktop )
 	dbus? ( dev-python/dbus-python dev-libs/dbus-glib )
 	libnotify? ( x11-libs/libnotify )
 	xhtml? ( dev-python/docutils )
