@@ -1,6 +1,9 @@
 # ChangeLog for net-im/gajim
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.77 2009/05/31 23:59:52 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.78 2009/07/21 11:31:41 ssuominen Exp $
+
+  21 Jul 2009; Samuli Suominen <ssuominen@gentoo.org> gajim-0.12.1.ebuild:
+  dev-lang/python needs to be built with USE xml wrt #254870.
 
   31 May 2009; Brent Baude <ranger@gentoo.org> gajim-0.12.1.ebuild:
   Marking gajim-0.12.1 ~ppc64 for bug 267709
